namespace Crm.Domain.Enums;

public enum ActivityType
{
    Call = 1,
    Email = 2,
    Meeting = 3,
    Message = 4,
    Other = 5,
}
