namespace Crm.Domain.Enums;

public enum RecommendationStatus
{
    New = 1,
    Viewed = 2,
    Applied = 3,
    Rejected = 4,
}
