namespace Crm.Domain.Enums;

public enum TaskStatus
{
    New = 1,
    InProgress = 2,
    Completed = 3,
    Cancelled = 4,
}
