namespace Crm.Domain.Enums;

public enum UserStatus
{
    Active = 1,
    Inactive = 2,
}
